# automafish

./: .nvimrc  Cargo.toml  README.md
src/: lib.rs
