[package]
name = "automafish"
version = "0.1.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
Automafish is a state machine builder for creating deterministic state machines
out of nondeterministic state machine definitions.
"""
documentation = "https://docs.rs/protofish"
repository = "https://github.com/Rantanen/protofish"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dev-dependencies]
test-env-log = "0.2"
env_logger = "0.8"
